test/vminsns/tailcall.inc2
(vmInstruction, needContext, triggerGC, tailCall)
tailcall : (JSValue, cint) -> void
tailcall (fn, nargs) {
  cint op = Get_opcode();
  cint sendp = (op != TAILSEND);
  set_fp(fp);         // fp と pc をどうする? ここなら save_fp() と save_pc() にすればよいか?
  set_pc(pc);
  // try_gc();
  
  match (fn) {
    case (Function fn) {
      Tailcall_function(fn, nargs, sendp);
      // update_context();    // DSL が出力?
      // こちらは NO_INC_PC
    }
    case (Buildin fn) {
      Tailcall_buildin(fn, nargs, sendp, FALSE);
      // update_context();    // DSL が出力?
      // こちらは INC_PC
    }
    case (JSValue fn) {
      // error
    }
  }
  cint newp = (op == NEWSEND);
  match (fn) {
    case (Function fn) {
      // set_fp();   // 自動で出力できる?
      // set_pc();   // 自動で出力できる?
      Call_function(fn, nargs, sendp);
      // こちらは NO_INC_PC
    }
    case (Builtin fn) {
      // set_fp();   // 自動で出力できる?
      // set_pc();   // 自動で出力できる?
      Call_builtin(fn, nargs, sendp, newp);
      // こちらは INC_PC
    }
  }
}